--- a/openshift-ci/Dockerfile.tools
+++ b/openshift-ci/Dockerfile.tools
@@ -7,6 +7,8 @@ RUN mkdir -p $GOPATH/src/github.com/operator-framework \
     && cd $GOPATH/src/github.com/operator-framework \
     && git clone --depth 1 -b $OPERATOR_SDK_VERSION https://github.com/operator-framework/operator-sdk \
     && cd operator-sdk \
+    && go mod vendor \
     && make tidy \
     && make install \
+    && chmod -R 0777 $GOPATH \
     && rm -rf $GOPATH/.cache
