--- a/openshift-ci/Dockerfile.tools
+++ b/openshift-ci/Dockerfile.tools
@@ -1,6 +1,7 @@
 FROM registry.svc.ci.openshift.org/openshift/release:golang-1.13
 
-ENV OPERATOR_SDK_VERSION=v0.12.0
+ENV OPERATOR_SDK_VERSION=v0.12.0 \
+    GOFLAGS=""
 
 # install operator-sdk (from git with no history and only the tag)
 RUN mkdir -p $GOPATH/src/github.com/operator-framework \
